--- a/src/vista/vistaRegistro.fxml
+++ b/src/vista/vistaRegistro.fxml
@@ -9,52 +9,56 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="controlador.VistaRegistroController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controlador.VistaRegistroController">
    <children>
       <Pane layoutX="413.0" prefHeight="536.0" prefWidth="384.0">
          <children>
-            <Label layoutX="66.0" layoutY="209.0" text="Crear Usuario:">
+            <Label layoutX="62.0" layoutY="195.0" text="Crear Usuario:">
                <font>
                   <Font size="18.0" />
                </font>
             </Label>
-            <Label layoutX="66.0" layoutY="297.0" text="Contraseña Contraseña:">
+            <Label layoutX="62.0" layoutY="282.0" text="Crear Contraseña:">
                <font>
                   <Font size="18.0" />
                </font>
             </Label>
-            <PasswordField fx:id="txtCContraseña" layoutX="66.0" layoutY="324.0" prefHeight="39.0" prefWidth="277.0">
+            <PasswordField fx:id="txtCContraseña" layoutX="62.0" layoutY="309.0" prefHeight="39.0" prefWidth="277.0">
                <font>
                   <Font size="18.0" />
                </font>
             </PasswordField>
-            <Button fx:id="btnRegistrarse" layoutX="66.0" layoutY="441.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="277.0" text="Registrar">
+            <Button fx:id="btnRegistrarse" layoutX="62.0" layoutY="416.0" mnemonicParsing="false" onAction="#guardarUsuario" prefHeight="39.0" prefWidth="277.0" text="Registrar">
                <font>
                   <Font size="18.0" />
                </font>
             </Button>
-            <Label layoutX="67.0" layoutY="393.0" text="Tipo Usuario:">
+            <Label layoutX="63.0" layoutY="368.0" text="Tipo Usuario:">
                <font>
                   <Font size="18.0" />
                </font>
             </Label>
-            <ComboBox fx:id="cbTipoUsuario" layoutX="183.0" layoutY="394.0" prefHeight="27.0" prefWidth="159.0" />
-            <Label layoutX="66.0" layoutY="123.0" text="Nombre::">
+            <ComboBox fx:id="cbTipoUsuario" layoutX="179.0" layoutY="369.0" onAction="#comboboxEvent" prefHeight="27.0" prefWidth="159.0" promptText="Tipo Usuario" />
+            <Label layoutX="62.0" layoutY="110.0" text="Nombre::">
                <font>
                   <Font size="18.0" />
                </font>
             </Label>
-            <TextField fx:id="txtNombre" layoutX="66.0" layoutY="150.0" prefHeight="39.0" prefWidth="277.0">
+            <TextField fx:id="txtNombre" layoutX="62.0" layoutY="137.0" prefHeight="39.0" prefWidth="277.0">
                <font>
                   <Font size="18.0" />
                </font>
             </TextField>
-            <TextField fx:id="txtUsuario" layoutX="66.0" layoutY="236.0" onKeyTyped="#eventKey" prefHeight="39.0" prefWidth="277.0">
+            <TextField fx:id="txtCUsuario" layoutX="62.0" layoutY="222.0" onKeyTyped="#eventKey" prefHeight="39.0" prefWidth="277.0">
                <font>
                   <Font size="18.0" />
                </font>
             </TextField>
+            <Button fx:id="btnSalir" layoutX="62.0" layoutY="474.0" mnemonicParsing="false" onAction="#salir" prefHeight="25.0" prefWidth="277.0" text="Salir">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Button>
          </children>
       </Pane>
    </children>
