--- a/src/vista/vistaRegistro.fxml
+++ b/src/vista/vistaRegistro.fxml
@@ -5,61 +5,73 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controlador.VistaRegistroController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #08071B;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controlador.VistaRegistroController">
    <children>
-      <Pane layoutX="413.0" prefHeight="536.0" prefWidth="384.0">
+      <Pane layoutX="413.0" prefHeight="536.0" prefWidth="384.0" style="-fx-background-color: #02010E;">
          <children>
-            <Label layoutX="62.0" layoutY="195.0" text="Crear Usuario:">
+            <Label layoutX="62.0" layoutY="224.0" text="Crear Usuario:" textFill="WHITE">
                <font>
                   <Font size="18.0" />
                </font>
             </Label>
-            <Label layoutX="62.0" layoutY="282.0" text="Crear Contraseña:">
+            <Label layoutX="62.0" layoutY="299.0" text="Crear Contraseña:" textFill="WHITE">
                <font>
                   <Font size="18.0" />
                </font>
             </Label>
-            <PasswordField fx:id="txtCContraseña" layoutX="62.0" layoutY="309.0" prefHeight="39.0" prefWidth="277.0">
+            <PasswordField fx:id="txtCContraseña" layoutX="62.0" layoutY="326.0" opacity="0.88" prefHeight="15.0" prefWidth="277.0" promptText="Crear contraseña">
                <font>
-                  <Font size="18.0" />
+                  <Font size="15.0" />
                </font>
             </PasswordField>
-            <Button fx:id="btnRegistrarse" layoutX="62.0" layoutY="416.0" mnemonicParsing="false" onAction="#guardarUsuario" prefHeight="39.0" prefWidth="277.0" text="Registrar">
+            <Button fx:id="btnRegistrarse" layoutX="62.0" layoutY="421.0" mnemonicParsing="false" onAction="#guardarUsuario" prefHeight="27.0" prefWidth="277.0" style="-fx-background-color: #2848BA;" text="Registrar" textFill="WHITE">
                <font>
-                  <Font size="18.0" />
+                  <Font size="16.0" />
                </font>
             </Button>
-            <Label layoutX="63.0" layoutY="368.0" text="Tipo Usuario:">
+            <Label layoutX="63.0" layoutY="376.0" text="Tipo Usuario:" textFill="WHITE">
                <font>
                   <Font size="18.0" />
                </font>
             </Label>
-            <ComboBox fx:id="cbTipoUsuario" layoutX="179.0" layoutY="369.0" onAction="#comboboxEvent" prefHeight="27.0" prefWidth="159.0" promptText="Tipo Usuario" />
-            <Label layoutX="62.0" layoutY="110.0" text="Nombre::">
+            <ComboBox fx:id="cbTipoUsuario" layoutX="179.0" layoutY="377.0" onAction="#comboboxEvent" prefHeight="27.0" prefWidth="159.0" promptText="Tipo Usuario" />
+            <Label layoutX="62.0" layoutY="149.0" text="Nombre::" textFill="WHITE">
                <font>
                   <Font size="18.0" />
                </font>
             </Label>
-            <TextField fx:id="txtNombre" layoutX="62.0" layoutY="137.0" prefHeight="39.0" prefWidth="277.0">
+            <TextField fx:id="txtNombre" layoutX="62.0" layoutY="176.0" opacity="0.88" prefHeight="27.0" prefWidth="277.0" promptText="Ingrese su nombre">
                <font>
-                  <Font size="18.0" />
+                  <Font size="15.0" />
                </font>
             </TextField>
-            <TextField fx:id="txtCUsuario" layoutX="62.0" layoutY="222.0" onKeyTyped="#eventKey" prefHeight="39.0" prefWidth="277.0">
+            <TextField fx:id="txtCUsuario" layoutX="62.0" layoutY="251.0" onKeyTyped="#eventKey" opacity="0.88" prefHeight="18.0" prefWidth="277.0" promptText="Crear usuario">
                <font>
-                  <Font size="18.0" />
+                  <Font size="15.0" />
                </font>
             </TextField>
-            <Button fx:id="btnSalir" layoutX="62.0" layoutY="474.0" mnemonicParsing="false" onAction="#salir" prefHeight="25.0" prefWidth="277.0" text="Salir">
+            <Button fx:id="btnSalir" layoutX="62.0" layoutY="473.0" mnemonicParsing="false" onAction="#salir" prefHeight="27.0" prefWidth="277.0" style="-fx-background-color: #2848BA;" text="Salir" textFill="WHITE">
                <font>
-                  <Font size="18.0" />
+                  <Font size="16.0" />
                </font>
             </Button>
+            <ImageView fitHeight="180.0" fitWidth="204.0" layoutX="118.0" layoutY="-17.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../imagenes/acceso.png" />
+               </image>
+            </ImageView>
          </children>
       </Pane>
+      <ImageView fitHeight="316.0" fitWidth="418.0" layoutY="110.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../imagenes/logo.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
