--- a/src/vista/vistaAdmin.fxml
+++ b/src/vista/vistaAdmin.fxml
@@ -1,16 +1,106 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="controlador.VistaAdminController">
+<AnchorPane id="AnchorPane" prefHeight="640.0" prefWidth="1020.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controlador.VistaAdminController">
    <children>
-      <Label layoutX="190.0" layoutY="174.0" text="VISTA ADMIN">
-         <font>
-            <Font size="36.0" />
-         </font>
-      </Label>
+      <Pane layoutX="-1.0" layoutY="-1.0" prefHeight="640.0" prefWidth="1020.0" style="-fx-background-color: #02010E;">
+         <children>
+            <Pane layoutX="14.0" layoutY="14.0" prefHeight="116.0" prefWidth="993.0" style="-fx-background-color: #08071B;">
+               <children>
+                  <ImageView fitHeight="129.0" fitWidth="151.0" layoutX="7.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../imagenes/logo.png" />
+                     </image>
+                  </ImageView>
+                  <Label layoutX="333.0" layoutY="1.0" prefHeight="116.0" prefWidth="248.0" text="CELL " textFill="WHITE">
+                     <font>
+                        <Font name="Webdings" size="96.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="581.0" layoutY="1.0" prefHeight="116.0" prefWidth="326.0" text="STORE" textFill="#8ce4b5">
+                     <font>
+                        <Font name="Webdings" size="96.0" />
+                     </font>
+                  </Label>
+               </children>
+            </Pane>
+            <Pane layoutX="14.0" layoutY="142.0" prefHeight="490.0" prefWidth="164.0" style="-fx-background-color: #08071B;">
+               <children>
+                  <Button layoutX="6.0" layoutY="14.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="151.0" style="-fx-background-color: #2848BA;" text="CATÁLOGO" textFill="WHITE">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Button>
+                  <Button layoutX="7.0" layoutY="65.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="151.0" style="-fx-background-color: #2848BA;" text="VENDER" textFill="WHITE">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Button>
+                  <Button layoutX="7.0" layoutY="114.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="151.0" style="-fx-background-color: #2848BA;" text="COMPRAR" textFill="WHITE">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Button>
+                  <Button layoutX="7.0" layoutY="165.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="151.0" style="-fx-background-color: #2848BA;" text="CLIENTES" textFill="WHITE">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Button>
+                  <Button layoutX="7.0" layoutY="215.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="151.0" style="-fx-background-color: #2848BA;" text="PRODUCTOS" textFill="WHITE">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Button>
+                  <Button layoutX="7.0" layoutY="264.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="151.0" style="-fx-background-color: #2848BA;" text="VENTAS" textFill="WHITE">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Button>
+                  <Button layoutX="7.0" layoutY="315.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="151.0" style="-fx-background-color: #2848BA;" text="COMPRAS" textFill="WHITE">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Button>
+                  <Button layoutX="7.0" layoutY="367.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="151.0" style="-fx-background-color: #2848BA;" text="PROVEEDOR" textFill="WHITE">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Button>
+                  <Button layoutX="7.0" layoutY="418.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="151.0" style="-fx-background-color: #2848BA;" text="USUARIOS" textFill="WHITE">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Button>
+               </children>
+            </Pane>
+            <Pane layoutX="186.0" layoutY="142.0" prefHeight="490.0" prefWidth="823.0">
+               <children>
+                  <TabPane prefHeight="490.0" prefWidth="823.0" tabClosingPolicy="UNAVAILABLE">
+                     <tabs>
+                        <Tab text="catálogo">
+                           <content>
+                              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                           </content>
+                        </Tab>
+                        <Tab text="vender">
+                           <content>
+                              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                           </content>
+                        </Tab>
+                     </tabs>
+                  </TabPane>
+               </children>
+            </Pane>
+         </children>
+      </Pane>
    </children>
 </AnchorPane>
