--- a/src/vista/vistaRegistro.fxml
+++ b/src/vista/vistaRegistro.fxml
@@ -15,53 +15,48 @@
    <children>
       <Pane layoutX="413.0" prefHeight="536.0" prefWidth="384.0" style="-fx-background-color: #02010E;">
          <children>
-            <Label layoutX="62.0" layoutY="224.0" text="Crear Usuario:" textFill="WHITE">
+            <Label layoutX="61.0" layoutY="241.0" text="Crear Usuario:" textFill="WHITE">
                <font>
                   <Font size="18.0" />
                </font>
             </Label>
-            <Label layoutX="62.0" layoutY="299.0" text="Crear Contraseña:" textFill="WHITE">
+            <Label layoutX="61.0" layoutY="316.0" text="Crear Contraseña:" textFill="WHITE">
                <font>
                   <Font size="18.0" />
                </font>
             </Label>
-            <PasswordField fx:id="txtCContraseña" layoutX="62.0" layoutY="326.0" opacity="0.88" prefHeight="15.0" prefWidth="277.0" promptText="Crear contraseña">
+            <PasswordField fx:id="txtCContraseña" layoutX="61.0" layoutY="343.0" opacity="0.88" prefHeight="15.0" prefWidth="277.0" promptText="Crear contraseña">
                <font>
                   <Font size="15.0" />
                </font>
             </PasswordField>
-            <Button fx:id="btnRegistrarse" layoutX="62.0" layoutY="421.0" mnemonicParsing="false" onAction="#guardarUsuario" prefHeight="27.0" prefWidth="277.0" style="-fx-background-color: #2848BA;" text="Registrar" textFill="WHITE">
+            <Button fx:id="btnRegistrarse" layoutX="63.0" layoutY="448.0" mnemonicParsing="false" onAction="#guardarUsuario" prefHeight="27.0" prefWidth="277.0" style="-fx-background-color: #2848BA;" text="Registrar" textFill="WHITE">
                <font>
                   <Font size="16.0" />
                </font>
             </Button>
-            <Label layoutX="63.0" layoutY="376.0" text="Tipo Usuario:" textFill="WHITE">
+            <Label layoutX="62.0" layoutY="393.0" text="Tipo Usuario:" textFill="WHITE">
                <font>
                   <Font size="18.0" />
                </font>
             </Label>
-            <ComboBox fx:id="cbTipoUsuario" layoutX="179.0" layoutY="377.0" onAction="#comboboxEvent" prefHeight="27.0" prefWidth="159.0" promptText="Tipo Usuario" />
-            <Label layoutX="62.0" layoutY="149.0" text="Nombre::" textFill="WHITE">
+            <ComboBox fx:id="cbTipoUsuario" layoutX="178.0" layoutY="394.0" onAction="#comboboxEvent" prefHeight="27.0" prefWidth="159.0" promptText="Tipo Usuario" />
+            <Label layoutX="61.0" layoutY="166.0" text="Nombre:" textFill="WHITE">
                <font>
                   <Font size="18.0" />
                </font>
             </Label>
-            <TextField fx:id="txtNombre" layoutX="62.0" layoutY="176.0" opacity="0.88" prefHeight="27.0" prefWidth="277.0" promptText="Ingrese su nombre">
+            <TextField fx:id="txtNombre" layoutX="61.0" layoutY="193.0" opacity="0.88" prefHeight="27.0" prefWidth="277.0" promptText="Ingrese su nombre">
                <font>
                   <Font size="15.0" />
                </font>
             </TextField>
-            <TextField fx:id="txtCUsuario" layoutX="62.0" layoutY="251.0" onKeyTyped="#eventKey" opacity="0.88" prefHeight="18.0" prefWidth="277.0" promptText="Crear usuario">
+            <TextField fx:id="txtCUsuario" layoutX="61.0" layoutY="268.0" onKeyTyped="#eventKey" opacity="0.88" prefHeight="18.0" prefWidth="277.0" promptText="Crear usuario">
                <font>
                   <Font size="15.0" />
                </font>
             </TextField>
-            <Button fx:id="btnSalir" layoutX="62.0" layoutY="473.0" mnemonicParsing="false" onAction="#salir" prefHeight="27.0" prefWidth="277.0" style="-fx-background-color: #2848BA;" text="Salir" textFill="WHITE">
-               <font>
-                  <Font size="16.0" />
-               </font>
-            </Button>
-            <ImageView fitHeight="180.0" fitWidth="204.0" layoutX="118.0" layoutY="-17.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="180.0" fitWidth="204.0" layoutX="111.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../imagenes/acceso.png" />
                </image>
