--- a/src/vista/vistaAdmin.fxml
+++ b/src/vista/vistaAdmin.fxml
@@ -2,8 +2,6 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -50,7 +48,7 @@
                         <Font size="18.0" />
                      </font>
                   </Button>
-                  <Button layoutX="7.0" layoutY="165.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="151.0" style="-fx-background-color: #2848BA;" text="CLIENTES" textFill="WHITE">
+                  <Button fx:id="btnCliente" layoutX="7.0" layoutY="165.0" mnemonicParsing="false" onMouseClicked="#cargarVistaCliente" prefHeight="39.0" prefWidth="151.0" style="-fx-background-color: #2848BA;" text="CLIENTES" textFill="WHITE">
                      <font>
                         <Font size="18.0" />
                      </font>
@@ -84,20 +82,14 @@
             </Pane>
             <Pane layoutX="186.0" layoutY="142.0" prefHeight="490.0" prefWidth="823.0">
                <children>
-                  <TabPane prefHeight="490.0" prefWidth="823.0" tabClosingPolicy="UNAVAILABLE">
-                     <tabs>
-                        <Tab text="catálogo">
-                           <content>
-                              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                           </content>
-                        </Tab>
-                        <Tab text="vender">
-                           <content>
-                              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                           </content>
-                        </Tab>
-                     </tabs>
-                  </TabPane>
+                  <AnchorPane fx:id="paneCliente" prefHeight="490.0" prefWidth="823.0" style="-fx-border-color: #08071B;">
+                     <children>
+                        <ImageView fitHeight="482.0" fitWidth="482.0" layoutX="171.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../imagenes/bienvenidos.png" />
+                           </image>
+                        </ImageView>
+                     </children></AnchorPane>
                </children>
             </Pane>
          </children>
