--- a/src/vista/vistaCliente.fxml
+++ b/src/vista/vistaCliente.fxml
@@ -53,7 +53,7 @@
                   <Font size="14.0" />
                </font>
             </TextField>
-            <Button fx:id="btnGuardar" layoutX="265.0" layoutY="112.0" mnemonicParsing="false" onAction="#agregarCliente" prefHeight="30.0" prefWidth="100.0" style="-fx-background-color: #2848BA;" text="GUARDAR" textFill="WHITE">
+            <Button fx:id="btnGuardar" layoutX="265.0" layoutY="112.0" mnemonicParsing="false" onAction="#setAddCliente" prefHeight="30.0" prefWidth="100.0" style="-fx-background-color: #2848BA;" text="GUARDAR" textFill="WHITE">
                <font>
                   <Font size="14.0" />
                </font>
