--- a/src/vista/vistaAdmin.fxml
+++ b/src/vista/vistaAdmin.fxml
@@ -33,7 +33,7 @@
             </Pane>
             <Pane layoutX="14.0" layoutY="142.0" prefHeight="490.0" prefWidth="164.0" style="-fx-background-color: #08071B;">
                <children>
-                  <Button layoutX="6.0" layoutY="14.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="151.0" style="-fx-background-color: #2848BA;" text="CATÁLOGO" textFill="WHITE">
+                  <Button fx:id="btCatalogo" layoutX="6.0" layoutY="14.0" mnemonicParsing="false" onMouseClicked="#cargarVistaCatalogo" prefHeight="39.0" prefWidth="151.0" style="-fx-background-color: #2848BA;" text="CATÁLOGO" textFill="WHITE">
                      <font>
                         <Font size="18.0" />
                      </font>
@@ -80,18 +80,7 @@
                   </Button>
                </children>
             </Pane>
-            <Pane layoutX="186.0" layoutY="142.0" prefHeight="490.0" prefWidth="823.0">
-               <children>
-                  <AnchorPane fx:id="paneCliente" prefHeight="490.0" prefWidth="823.0" style="-fx-border-color: #08071B;">
-                     <children>
-                        <ImageView fitHeight="482.0" fitWidth="482.0" layoutX="171.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../imagenes/bienvenidos.png" />
-                           </image>
-                        </ImageView>
-                     </children></AnchorPane>
-               </children>
-            </Pane>
+            <Pane fx:id="panePrincipal" layoutX="187.0" layoutY="142.0" prefHeight="490.0" prefWidth="823.0" />
          </children>
       </Pane>
    </children>
