--- a/src/vista/vistaVendedor.fxml
+++ b/src/vista/vistaVendedor.fxml
@@ -2,8 +2,6 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -82,24 +80,7 @@
                   </Button>
                </children>
             </Pane>
-            <Pane layoutX="186.0" layoutY="142.0" prefHeight="490.0" prefWidth="823.0">
-               <children>
-                  <TabPane prefHeight="490.0" prefWidth="823.0" tabClosingPolicy="UNAVAILABLE">
-                     <tabs>
-                        <Tab text="catálogo">
-                           <content>
-                              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                           </content>
-                        </Tab>
-                        <Tab text="vender">
-                           <content>
-                              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                           </content>
-                        </Tab>
-                     </tabs>
-                  </TabPane>
-               </children>
-            </Pane>
+            <Pane layoutX="186.0" layoutY="142.0" prefHeight="490.0" prefWidth="823.0" />
          </children>
       </Pane>
    </children>
