--- a/src/vista/vistaAdmin.fxml
+++ b/src/vista/vistaAdmin.fxml
@@ -38,12 +38,12 @@
                         <Font size="18.0" />
                      </font>
                   </Button>
-                  <Button layoutX="7.0" layoutY="65.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="151.0" style="-fx-background-color: #2848BA;" text="VENDER" textFill="WHITE">
+                  <Button fx:id="btnVender" layoutX="7.0" layoutY="65.0" mnemonicParsing="false" onMouseClicked="#cargarVistaVender" prefHeight="39.0" prefWidth="151.0" style="-fx-background-color: #2848BA;" text="VENDER" textFill="WHITE">
                      <font>
                         <Font size="18.0" />
                      </font>
                   </Button>
-                  <Button layoutX="7.0" layoutY="114.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="151.0" style="-fx-background-color: #2848BA;" text="COMPRAR" textFill="WHITE">
+                  <Button fx:id="btnComprar" layoutX="7.0" layoutY="114.0" mnemonicParsing="false" onMouseClicked="#cargarVistaComprar" prefHeight="39.0" prefWidth="151.0" style="-fx-background-color: #2848BA;" text="COMPRAR" textFill="WHITE">
                      <font>
                         <Font size="18.0" />
                      </font>
@@ -53,22 +53,22 @@
                         <Font size="18.0" />
                      </font>
                   </Button>
-                  <Button layoutX="7.0" layoutY="215.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="151.0" style="-fx-background-color: #2848BA;" text="PRODUCTOS" textFill="WHITE">
+                  <Button fx:id="btnProductos" layoutX="7.0" layoutY="215.0" mnemonicParsing="false" onMouseClicked="#cargarVistaProductos" prefHeight="39.0" prefWidth="151.0" style="-fx-background-color: #2848BA;" text="PRODUCTOS" textFill="WHITE">
                      <font>
                         <Font size="18.0" />
                      </font>
                   </Button>
-                  <Button layoutX="7.0" layoutY="264.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="151.0" style="-fx-background-color: #2848BA;" text="VENTAS" textFill="WHITE">
+                  <Button fx:id="btnVentas" layoutX="7.0" layoutY="264.0" mnemonicParsing="false" onMouseClicked="#cargarVistaVentas" prefHeight="39.0" prefWidth="151.0" style="-fx-background-color: #2848BA;" text="VENTAS" textFill="WHITE">
                      <font>
                         <Font size="18.0" />
                      </font>
                   </Button>
-                  <Button layoutX="7.0" layoutY="315.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="151.0" style="-fx-background-color: #2848BA;" text="COMPRAS" textFill="WHITE">
+                  <Button fx:id="btnCompras" layoutX="7.0" layoutY="315.0" mnemonicParsing="false" onMouseClicked="#cargarVistaCompras" prefHeight="39.0" prefWidth="151.0" style="-fx-background-color: #2848BA;" text="COMPRAS" textFill="WHITE">
                      <font>
                         <Font size="18.0" />
                      </font>
                   </Button>
-                  <Button layoutX="7.0" layoutY="367.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="151.0" style="-fx-background-color: #2848BA;" text="PROVEEDOR" textFill="WHITE">
+                  <Button fx:id="btnProveedor" layoutX="7.0" layoutY="367.0" mnemonicParsing="false" onMouseClicked="#cargarVistaProveedor" prefHeight="39.0" prefWidth="151.0" style="-fx-background-color: #2848BA;" text="PROVEEDOR" textFill="WHITE">
                      <font>
                         <Font size="18.0" />
                      </font>
@@ -80,7 +80,14 @@
                   </Button>
                </children>
             </Pane>
-            <Pane fx:id="panePrincipal" layoutX="187.0" layoutY="142.0" prefHeight="490.0" prefWidth="823.0" />
+            <Pane fx:id="panePrincipal" layoutX="187.0" layoutY="142.0" prefHeight="490.0" prefWidth="823.0">
+               <children>
+                  <ImageView fitHeight="381.0" fitWidth="476.0" layoutX="221.0" layoutY="55.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../imagenes/bienvenidos.png" />
+                     </image>
+                  </ImageView>
+               </children></Pane>
          </children>
       </Pane>
    </children>
