--- a/src/vista/vistaProductos.fxml
+++ b/src/vista/vistaProductos.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -62,7 +63,6 @@
             <TextField fx:id="txtModelo" layoutX="399.0" layoutY="35.0" opacity="0.88" prefHeight="25.0" prefWidth="171.0" />
             <TextField fx:id="txtPrecioCompra" layoutX="604.0" layoutY="35.0" opacity="0.88" prefHeight="25.0" prefWidth="171.0" />
             <TextField fx:id="txtPrecioVenta" layoutX="604.0" layoutY="95.0" opacity="0.88" prefHeight="25.0" prefWidth="171.0" />
-            <TextField fx:id="txtProveedor" layoutX="399.0" layoutY="97.0" opacity="0.88" prefHeight="25.0" prefWidth="171.0" />
             <Button id="anchorPane" fx:id="btnAgregar" layoutX="215.0" layoutY="132.0" mnemonicParsing="false" onAction="#setAddAgregar" prefHeight="31.0" prefWidth="113.0" style="-fx-background-color: #2848BA;" text="AGREGAR" textFill="WHITE">
                <font>
                   <Font size="14.0" />
@@ -99,17 +99,20 @@
                   </ImageView>
                </graphic>
             </Button>
+            <ComboBox fx:id="txtProveedor" layoutX="399.0" layoutY="95.0" prefHeight="25.0" prefWidth="171.0" />
          </children>
       </Pane>
-      <TableView layoutX="14.0" layoutY="180.0" prefHeight="301.0" prefWidth="794.0">
+      <TableView fx:id="tblProductos" layoutX="22.0" layoutY="175.0" prefHeight="301.0" prefWidth="794.0">
         <columns>
-          <TableColumn prefWidth="84.0" text="CÓDIGO" />
-          <TableColumn prefWidth="120.0" text="MARCA" />
-            <TableColumn prefWidth="167.0" text="MODELO" />
-            <TableColumn prefWidth="74.0" text="RAM" />
-            <TableColumn prefWidth="131.0" text="ALMACENAMIENTO" />
-            <TableColumn prefWidth="91.0" text="CANTIDAD" />
-            <TableColumn prefWidth="126.0" text="PRECIO VENTA" />
+          <TableColumn fx:id="colID" prefWidth="58.0" text="ID" />
+          <TableColumn fx:id="colCodigo" prefWidth="82.0" text="CÓDIGO" />
+            <TableColumn fx:id="colMarca" prefWidth="103.0" text="MARCA" />
+            <TableColumn fx:id="colModelo" prefWidth="120.0" text="MODELO" />
+            <TableColumn fx:id="colRam" prefWidth="100.0" text="RAM" />
+            <TableColumn fx:id="colAlmacenamiento" prefWidth="130.0" text="ALMACENAMIENTO" />
+            <TableColumn fx:id="colCantidad" text="CANTIDAD" />
+            <TableColumn fx:id="colPrecioVenta" prefWidth="120.0" text="PRECIO VENTA" />
+            <TableColumn prefWidth="75.0" text="Column X" />
         </columns>
       </TableView>
    </children>
