--- a/src/vista/vistaCliente.fxml
+++ b/src/vista/vistaCliente.fxml
@@ -51,7 +51,7 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Button fx:id="btnLimpiar" layoutX="375.0" layoutY="113.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="113.0" style="-fx-background-color: #2848BA;" text="LIMPIAR" textFill="WHITE">
+            <Button fx:id="btnLimpiar" layoutX="375.0" layoutY="113.0" mnemonicParsing="false" onAction="#limpiarTxt" prefHeight="31.0" prefWidth="113.0" style="-fx-background-color: #2848BA;" text="LIMPIAR" textFill="WHITE">
                <font>
                   <Font size="14.0" />
                </font>
@@ -63,7 +63,7 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Button fx:id="btnEliminar" layoutX="505.0" layoutY="113.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="113.0" style="-fx-background-color: #2848BA;" text="ELIMINAR" textFill="WHITE">
+            <Button fx:id="btnEliminar" layoutX="505.0" layoutY="113.0" mnemonicParsing="false" onAction="#eliminar" prefHeight="31.0" prefWidth="113.0" style="-fx-background-color: #2848BA;" text="ELIMINAR" textFill="WHITE">
                <font>
                   <Font size="14.0" />
                </font>
@@ -77,7 +77,7 @@
             </Button>
          </children>
       </Pane>
-      <TableView fx:id="tblCliente" layoutX="13.0" layoutY="158.0" prefHeight="321.0" prefWidth="794.0">
+      <TableView fx:id="tblCliente" layoutX="13.0" layoutY="158.0" onMouseClicked="#seleccionar" prefHeight="321.0" prefWidth="794.0">
         <columns>
           <TableColumn fx:id="colID" prefWidth="139.0" text="DNI" />
           <TableColumn fx:id="colNombre" prefWidth="287.0" text="NOMBRE" />
