--- a/src/vista/vistaProveedor.fxml
+++ b/src/vista/vistaProveedor.fxml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ContextMenu?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -36,7 +38,7 @@
       <TextField fx:id="txtNombre" layoutX="192.0" layoutY="72.0" opacity="0.88" prefHeight="25.0" prefWidth="189.0" />
       <TextField fx:id="txtTelefono" layoutX="513.0" layoutY="73.0" opacity="0.88" prefHeight="25.0" prefWidth="189.0" />
       <TextField fx:id="txtDireccion" layoutX="513.0" layoutY="25.0" opacity="0.88" prefHeight="25.0" prefWidth="189.0" />
-      <Button fx:id="btnGuardar" layoutX="244.0" layoutY="106.0" mnemonicParsing="false" onAction="#setAddProveedor" prefHeight="31.0" prefWidth="113.0" style="-fx-background-color: #2848BA;" text="GUARDAR" textFill="WHITE">
+      <Button fx:id="btnGuardar" layoutX="296.0" layoutY="106.0" mnemonicParsing="false" onAction="#setAddProveedor" prefHeight="31.0" prefWidth="116.0" style="-fx-background-color: #2848BA;" text="GUARDAR" textFill="WHITE">
          <font>
             <Font size="14.0" />
          </font>
@@ -48,26 +50,14 @@
             </ImageView>
          </graphic>
       </Button>
-      <Button fx:id="btnLimpiar" layoutX="372.0" layoutY="107.0" mnemonicParsing="false" onAction="#limpiartxt" prefHeight="31.0" prefWidth="113.0" style="-fx-background-color: #2848BA;" text="LIMPIAR" textFill="WHITE">
+      <Button fx:id="btnLimpiar" layoutX="436.0" layoutY="106.0" mnemonicParsing="false" onAction="#limpiartxt" prefHeight="31.0" prefWidth="116.0" style="-fx-background-color: #2848BA;" text="LIMPIAR" textFill="WHITE">
          <font>
             <Font size="14.0" />
          </font>
          <graphic>
-            <ImageView fitHeight="21.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="21.0" fitWidth="26.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../imagenes/limpiar.png" />
-               </image>
-            </ImageView>
-         </graphic>
-      </Button>
-      <Button fx:id="btnEliminar" layoutX="502.0" layoutY="107.0" mnemonicParsing="false" onAction="#eliminar" prefHeight="31.0" prefWidth="113.0" style="-fx-background-color: #2848BA;" text="ELIMINAR" textFill="WHITE">
-         <font>
-            <Font size="14.0" />
-         </font>
-         <graphic>
-            <ImageView fitHeight="21.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../imagenes/eliminar%20(1).png" />
                </image>
             </ImageView>
          </graphic>
@@ -79,6 +69,13 @@
             <TableColumn fx:id="colDireccion" prefWidth="247.0" text="DIRECCIÓN" />
             <TableColumn fx:id="colTelefono" prefWidth="182.0" text="TELÉFONO" />
         </columns>
+         <contextMenu>
+            <ContextMenu>
+              <items>
+                <MenuItem fx:id="contexMenu" mnemonicParsing="false" onAction="#eliminarProveedor" text="Eliminar Proveedor" />
+              </items>
+            </ContextMenu>
+         </contextMenu>
       </TableView>
    </children>
 </AnchorPane>
