--- a/src/vista/vistaComprar.fxml
+++ b/src/vista/vistaComprar.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ContextMenu?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -11,36 +12,35 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="490.0" prefWidth="823.0" style="-fx-background-color: #08071B;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="controlador.VistaComprarController">
+<AnchorPane id="AnchorPane" prefHeight="490.0" prefWidth="823.0" style="-fx-background-color: #08071B;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controlador.VistaComprarController">
    <children>
       <Pane prefHeight="155.0" prefWidth="823.0" style="-fx-background-color: #08071B;">
          <children>
-            <Label layoutX="97.0" layoutY="20.0" text="Código:" textFill="WHITE">
+            <Label layoutX="26.0" layoutY="23.0" text="Código:" textFill="WHITE">
                <font>
                   <Font size="14.0" />
                </font>
             </Label>
-            <Label layoutX="472.0" layoutY="20.0" text="Marca:" textFill="WHITE">
+            <Label layoutX="221.0" layoutY="23.0" text="Marca:" textFill="WHITE">
                <font>
                   <Font size="14.0" />
                </font>
             </Label>
-            <Label layoutX="86.0" layoutY="66.0" text="Cantidad:" textFill="WHITE">
+            <Label layoutX="14.0" layoutY="68.0" text="Cantidad:" textFill="WHITE">
                <font>
                   <Font size="14.0" />
                </font>
             </Label>
-            <Label layoutX="460.0" layoutY="68.0" text="Modelo:" textFill="WHITE">
+            <Label layoutX="518.0" layoutY="26.0" text="Modelo:" textFill="WHITE">
                <font>
                   <Font size="14.0" />
                </font>
             </Label>
-            <TextField layoutX="160.0" layoutY="20.0" opacity="0.88" prefHeight="25.0" prefWidth="220.0" />
-            <TextField layoutX="528.0" layoutY="20.0" opacity="0.88" prefHeight="25.0" prefWidth="220.0" />
-            <TextField layoutX="528.0" layoutY="63.0" opacity="0.88" prefHeight="25.0" prefWidth="220.0" />
-            <TextField layoutX="160.0" layoutY="63.0" opacity="0.88" prefHeight="25.0" prefWidth="220.0" />
-            <Button fx:id="btnLimpiar" layoutX="380.0" layoutY="101.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="113.0" style="-fx-background-color: #2848BA;" text="LIMPIAR" textFill="WHITE">
+            <TextField fx:id="txtCodigo" layoutX="89.0" layoutY="23.0" onAction="#buscarProducto" opacity="0.88" prefHeight="25.0" prefWidth="113.0" />
+            <TextField fx:id="txtMarca" layoutX="277.0" layoutY="23.0" opacity="0.88" prefHeight="25.0" prefWidth="220.0" />
+            <TextField fx:id="txtModelo" layoutX="577.0" layoutY="23.0" opacity="0.88" prefHeight="25.0" prefWidth="220.0" />
+            <TextField fx:id="txtCantidad" layoutX="88.0" layoutY="65.0" opacity="0.88" prefHeight="25.0" prefWidth="113.0" />
+            <Button fx:id="btnLimpiar" layoutX="356.0" layoutY="101.0" mnemonicParsing="false" onAction="#setAddLimpiar" prefHeight="33.0" prefWidth="113.0" style="-fx-background-color: #2848BA;" text="LIMPIAR" textFill="WHITE">
                <font>
                   <Font size="14.0" />
                </font>
@@ -52,19 +52,7 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Button fx:id="btnEliminar" layoutX="511.0" layoutY="101.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="113.0" style="-fx-background-color: #2848BA;" text="ELIMINAR" textFill="WHITE">
-               <font>
-                  <Font size="14.0" />
-               </font>
-               <graphic>
-                  <ImageView fitHeight="21.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../imagenes/eliminar%20(1).png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </Button>
-            <Button id="anchorPane" fx:id="btnGuardar" layoutX="248.0" layoutY="101.0" mnemonicParsing="false" onAction="#setAddVender" prefHeight="31.0" prefWidth="113.0" style="-fx-background-color: #2848BA;" text="AGREGAR" textFill="WHITE">
+            <Button id="anchorPane" fx:id="btnGuardar" layoutX="224.0" layoutY="101.0" mnemonicParsing="false" onAction="#setAddVender" prefHeight="31.0" prefWidth="113.0" style="-fx-background-color: #2848BA;" text="AGREGAR" textFill="WHITE">
                <font>
                   <Font size="14.0" />
                </font>
@@ -76,6 +64,30 @@
                   </ImageView>
                </graphic>
             </Button>
+            <TextField fx:id="txtPrecio" layoutX="277.0" layoutY="65.0" opacity="0.88" prefHeight="25.0" prefWidth="220.0" />
+            <Label layoutX="221.0" layoutY="68.0" text="Precio:" textFill="WHITE">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label layoutX="535.0" layoutY="64.0" text="Total:" textFill="WHITE">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <TextField fx:id="txtTotalPagar" layoutX="577.0" layoutY="61.0" opacity="0.88" prefHeight="25.0" prefWidth="220.0" />
+            <Button fx:id="btnCalcular" layoutX="487.0" layoutY="101.0" mnemonicParsing="false" onAction="#calcularTotal" prefHeight="33.0" prefWidth="113.0" style="-fx-background-color: #2848BA;" text="CALCULAR" textFill="WHITE">
+               <font>
+                  <Font size="14.0" />
+               </font>
+               <graphic>
+                  <ImageView fitHeight="22.0" fitWidth="29.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../imagenes/metodo-de-pago.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </Button>
          </children>
       </Pane>
       <Label layoutX="44.0" layoutY="451.0" text="Proveedor:" textFill="WHITE">
@@ -83,13 +95,7 @@
             <Font size="14.0" />
          </font>
       </Label>
-      <TextField layoutX="121.0" layoutY="449.0" opacity="0.88" prefHeight="25.0" prefWidth="220.0" />
-      <Label layoutX="370.0" layoutY="451.0" text="Total a Pagar:" textFill="WHITE">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Label>
-      <TextField layoutX="465.0" layoutY="449.0" opacity="0.88" prefHeight="25.0" prefWidth="220.0" />
+      <TextField fx:id="txtProveedor" layoutX="121.0" layoutY="449.0" opacity="0.88" prefHeight="25.0" prefWidth="220.0" />
       <Button fx:id="btnImprimir" layoutX="696.0" layoutY="443.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="113.0" style="-fx-background-color: #2848BA;" text="IMPRIMIR" textFill="WHITE">
          <font>
             <Font size="14.0" />
@@ -102,13 +108,23 @@
             </ImageView>
          </graphic>
       </Button>
-      <TableView layoutX="15.0" layoutY="145.0" prefHeight="285.0" prefWidth="794.0">
+      <TableView fx:id="tblComprar" layoutX="15.0" layoutY="145.0" onMouseClicked="#seleccionar" prefHeight="285.0" prefWidth="794.0">
         <columns>
-          <TableColumn prefWidth="134.0" text="CÓDIGO" />
-          <TableColumn prefWidth="202.0" text="MARCA" />
-            <TableColumn prefWidth="276.0" text="MODELO" />
-            <TableColumn prefWidth="181.0" text="CANTIDAD" />
+          <TableColumn fx:id="colCodigo" prefWidth="90.0" text="CÓDIGO" />
+          <TableColumn fx:id="colMarca" prefWidth="125.0" text="MARCA" />
+            <TableColumn fx:id="colModelo" prefWidth="134.0" text="MODELO" />
+            <TableColumn fx:id="colCantidad" prefWidth="127.0" text="CANTIDAD" />
+            <TableColumn fx:id="colTotal" prefWidth="154.0" text="TOTAL" />
+            <TableColumn fx:id="colProveedor" prefWidth="162.0" text="PROVEEDOR" />
         </columns>
+         <contextMenu>
+            <ContextMenu />
+         </contextMenu>
       </TableView>
+      <Button fx:id="btnComprar" layoutX="569.0" layoutY="443.0" mnemonicParsing="false" onAction="#generarCompra" prefHeight="37.0" prefWidth="113.0" style="-fx-background-color: #2848BA;" text="COMPRAR" textFill="WHITE">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
